# sphinx-idl

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: pypi-package.yml
doc/: Makefile  autodoc.rst  conf.py  index.rst  install.rst  make.bat  reference.rst
examples/autodoc/: conf.py  files.rst  index.rst  path.rst
examples/source/: function.pro  procedure.pro
examples/source/group/: one.pro  two.pro
sphinx_idl/: auto.py  domain.py  parser.py
