[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sphinx-idl"
dynamic = ["version"]
description = "Sphinx \"IDL\" extension"
readme = "README.rst"
requires-python = ">=3.7"
license = "BSD"
authors = [
    { name = "Alex Rudy", email = "opensource@alexrudy.net" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "Sphinx>=1.0",
]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }


[tool.hatch.build.targets.sdist]
include = [
    "/sphinx_idl",
]

[tool.black]
line-length = 120
